--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
             </div>
 
             <div class="area-de-ilustracao-e-texto">
-                <div class="ilustracao"><img src="https://digitshack.com/codepen/mentor7/illustration-mockups.svg" alt="ilustracao de fundo da página">
+                <div class="ilustracao">
+                    <img src="https://digitshack.com/codepen/mentor7/illustration-mockups.svg" alt="ilustracao de fundo da página">
                 </div>
+                
                 <div class="texto-apresentacao">
                     <h1>Build The Community Your Fans Will Love</h1>
+                    
                     <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
                         Create connections with your users as you engage in genuine discussion.</p>
+
                     <a href="#">Register</a>
                 </div>
             </div>
